Profiles are editable